...
              />
            ))}
          </Box>

          {/* Lupa */}
          <Button
            testID="btn-abrir-mapa"
            onPress={() => navigation.navigate('MapScreen')}
            style={{ position: 'relative', top: 0, right: 0 }}
          >
            <SearchIcon />
          </Button>
        </Box>
...
