...
              </ScrollView>
            </Box>
          )}

          <Box flexDirection="row" alignItems="center" gap="s20">
            <Button
              testID="btn-voltar-mapa"
              style={{ position: 'relative', zIndex: 10 }}
              onPress={() => navigation.goBack()}
            >
              <ArrowBack />
            </Button>

...
